k8s2/kafka-broker-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker-2
  namespace: perrinn-424-rt-streaming
  labels:
    app: kafka-broker-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker-2
  template:
    metadata:
      labels:
        app: kafka-broker-2
    spec:
      hostname: kafka-broker-2
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.3.2
        ports:
        - containerPort: 9093
        - containerPort: 29093
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-2
  namespace: perrinn-424-rt-streaming
spec:
  ports:
  - name: external
    port: 9093
    targetPort: 9093
  - name: internal
    port: 29093
    targetPort: 29093
  selector:
    app: kafka-broker-2
  type: ClusterIP
