k8s2/kafka-broker-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker-3
  namespace: perrinn-424-rt-streaming
  labels:
    app: kafka-broker-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker-3
  template:
    metadata:
      labels:
        app: kafka-broker-3
    spec:
      hostname: kafka-broker-3
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.3.2
        ports:
        - containerPort: 9094
        - containerPort: 29094
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-3
  namespace: perrinn-424-rt-streaming
spec:
  ports:
  - name: external
    port: 9094
    targetPort: 9094
  - name: internal
    port: 29094
    targetPort: 29094
  selector:
    app: kafka-broker-3
  type: ClusterIP
