k8s2/kafka-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
  namespace: perrinn-424-rt-streaming
  labels:
    app: kafka-app
spec:
  clusterIP: None        # headless service for StatefulSet
  ports:
    - name: broker
      port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app: kafka-app

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: perrinn-424-rt-streaming
  labels:
    app: kafka-app
spec:
  serviceName: kafka-svc
  replicas: 1
  selector:
    matchLabels:
      app: kafka-app
  template:
    metadata:
      labels:
        app: kafka-app
    spec:
      containers:
        - name: kafka
          image: doughgle/kafka-kraft:latest
          ports:
            - containerPort: 9092
          volumeMounts:
            - name: kafka-data
              mountPath: /mnt/kafka
      terminationGracePeriodSeconds: 30

  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
