k8s2/zookeeper-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zoonavigator
  namespace: perrinn-424-rt-streaming
  labels:
    app: zoonavigator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zoonavigator
  template:
    metadata:
      labels:
        app: zoonavigator
    spec:
      containers:
      - name: zoonavigator
        image: elkozmon/zoonavigator:latest
        ports:
        - containerPort: 9000
          protocol: TCP
        resources:
          limits:
            memory: "536870912"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: zoonavigator
  namespace: perrinn-424-rt-streaming
  labels:
    app: zoonavigator
spec:
  selector:
    app: zoonavigator
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  type: NodePort
