k8s2/zookeeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-1
  namespace: perrinn-424-rt-streaming
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: confluentinc/cp-zookeeper:7.3.2
        ports:
        - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-1
  namespace: perrinn-424-rt-streaming
spec:
  ports:
  - port: 2181
    targetPort: 2181
  selector:
    app: zookeeper
