k8s2/kafka-rest-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-rest-proxy
  namespace: perrinn-424-rt-streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-rest-proxy
  template:
    metadata:
      labels:
        app: kafka-rest-proxy
    spec:
      containers:
      - name: rest-proxy
        image: confluentinc/cp-kafka-rest:7.3.2
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-rest-proxy
  namespace: perrinn-424-rt-streaming
spec:
  type: ClusterIP
  selector:
    app: kafka-rest-proxy
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-rest-proxy-ingress
  namespace: perrinn-424-rt-streaming
spec:
  ingressClassName: nginx
  rules:
  - host: kafka-rest.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-rest-proxy
            port:
              number: 8082
